testdata/baselines/reference/submodule/conformance/jsDeclarationsExportAssignedClassInstance1.errors.txt
index.js(3,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== index.js (1 errors) ====
    class Foo {}
    
    module.exports = new Foo();
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.